# NOEMA_Combine_scripts

./: .gitignore  .readthedocs.yaml  LICENSE  NGC1333_shift.map  README.md  config.py  config_test.ini  convert_30m_tab.py  line_catalogue_3mm.csv  process_files.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  python-publish.yml  ruff.yml
backup/: NGC1333_maps.map
docs/: conf.py  configuration_files.rst  generate_uvt.rst  index.rst  installation.rst
examples/: config.ini  run_calib.py
src/noema_combine/: __init__.py  clic_config_MIOP.yaml  config.ini  data_handler.py  generate_uvt.py  line_catalogue_3mm.csv  line_catalogue_MIOP.csv  region_catalogue.yml  source_list.csv
src/test/: test_data_handler.py  test_generate_uvt.py
test/: setup004-CD-uvts.clic
