[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "noema_combine"
dependencies = ["numpy", "pyyaml", "astropy"]
requires-python = ">=3.10"
authors = [{ name = "Jaime E. Pineda", email = "jpineda@mpe.mpg.de" }]
maintainers = [{ name = "Jaime E. Pineda", email = "jpineda@mpe.mpg.de" }]
description = "Package to be used for 30-m and NOEMA data processing and combination."
readme = "README.md"
license = { text = "MIT License" }

dynamic = ["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools_scm]
version_file = "src/noema_combine/_version.py"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.coverage.run]
branch = true
source = ["noema_combine"]

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = ["--ignore=src/noema_combine/_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[project.urls]
Homepage = "https://github.com/jpinedaf/NOEMA_Combine_scripts/"

[tool.black]
target-version = ['py39']
